marked 1.2.1 29 March 2018
-----------------
CHANGES

* minor adjustment to Description file and new init.c for routine registration for CRAN pass


marked 1.2.0 26 March 2018
-----------------
CHANGES

* changed use of rBind and cBind to rbind and cbind for change in MATRIX package; requires >=R3.2.0 so version incremented

marked 1.1.14 24 July 2017
-----------------
BUG FIXES

* bug fixed in js.hessian which prevented computation of vcv matrix because of earlier change restructuring model object. Thanks to Bjorn Kroger for reporting problem.

NEW FEATURES

* addition of priors for cjs with TMB - still in testing phase

CHANGES

* make.design.data will now return an error if field names not in data are specified in static list.

* in mvmscjs model, p and Phi can now also be all fixed values. Also, all parameters are now checked for empty columns because of fixed parameter values. Previously only Psi was.

* create.dm now checks and traps for NA in any variable used in the formula and stops if it is encountered and reports problem variable. Previously a very obtuse R error was given.


marked 1.1.13 5 December 2016
-----------------
BUG FIXES

* patched mvms.f for non-admb version of MVMSCJS. Code had an incorrect index that only worked if delta did not vary by individual.

* patched mvmscjs.r so that it allows ~0 for delta (all fixed values) in the ADMB version. Also, now all Psi can be fixed as well.

CHANGES

* added returns to output when debug=T for MVMS so warning about last line incomplete should not appear.

* added checks HMMLikelihood to outline errors when dmat, gamma or delta are not formed correctly. Typically this will be due to fix values being set incorrectly. Also, HMMLikelihood is now called prior to mvmscjs to check for those errors to avoid putting checks in ADMB code as well.

marked 1.1.12 26 September 2016
-----------------
NEW FEATURES

* parameter pi has been added to MVMSCJS model. Including pi allows the initial 