@@ -222,7 +222,8 @@ mscjs=function(x,ddl,dml,model_data=NULL,parameters,accumulate=TRUE,initial=NULL
     slist=simplify_indices(cbind(phidm,phifix))
     write(ncol(phidm),con,append=TRUE)
     write(length(slist$set),con,append=TRUE)
-    write(t(phidm[slist$set,,drop=FALSE]),con,ncolumns=ncol(phidm),append=TRUE)
+    if(ncol(phidm)>0)
+       write(t(phidm[slist$set,,drop=FALSE]),con,ncolumns=ncol(phidm),append=TRUE)
     write(phifix[slist$set],con,append=TRUE)
     write(slist$indices[ddl$S.indices],con,append=TRUE)
  	# p design matrix
@@ -233,7 +234,8 @@ mscjs=function(x,ddl,dml,model_data=NULL,parameters,accumulate=TRUE,initial=NULL
 	slist=simplify_indices(cbind(pdm,pfix))
 	write(ncol(pdm),con,append=TRUE)
 	write(length(slist$set),con,append=TRUE)
-	write(t(pdm[slist$set,,drop=FALSE]),con,ncolumns=ncol(pdm),append=TRUE)
+	if(ncol(pdm)>0)
+	   write(t(pdm[slist$set,,drop=FALSE]),con,ncolumns=ncol(pdm),append=TRUE)
 	write(pfix[slist$set],con,append=TRUE)
 	write(slist$indices[ddl$p.indices],con,append=TRUE)
 	#Psi design matrix
@@ -241,18 +243,22 @@ mscjs=function(x,ddl,dml,model_data=NULL,parameters,accumulate=TRUE,initial=NULL
 	psifix=rep(-1,nrow(psidm))
 	if(!is.null(ddl$Psi$fix))
 	psifix[!is.na(ddl$Psi$fix)]=ddl$Psi$fix[!is.na(ddl$Psi$fix)]
-    slist=simplify_indices(cbind(psidm,psifix))
-    write(ncol(psidm),con,append=TRUE)
-    write(length(slist$set),con,append=TRUE)
-    write(t(psidm[slist$set,,drop=FALSE]),con,ncolumns=ncol(psidm),append=TRUE)
-    write(psifix[slist$set],con,append=TRUE)
-    write(slist$indices[ddl$Psi.indices],con,append=TRUE)
+  slist=simplify_indices(cbind(psidm,psifix))
+  write(ncol(psidm),con,append=TRUE)
+  write(length(slist$set),con,append=TRUE)
+  if(ncol(psidm)>0)
+     write(t(psidm[slist$set,,drop=FALSE]),con,ncolumns=ncol(psidm),append=TRUE)
+  write(psifix[slist$set],con,append=TRUE)
+  write(slist$indices[ddl$Psi.indices],con,append=TRUE)
 	close(con)
 #   write out initial values for betas
 	con=file(paste(tpl,".pin",sep=""),open="wt")
-	write(par$S,con,ncolumns=length(par$S),append=FALSE)
-	write(par$p,con,ncolumns=length(par$p),append=TRUE)
-	write(par$Psi,con,ncolumns=length(par$Psi),append=FALSE)
+	if(ncol(phidm)>0)
+	  write(par$S,con,ncolumns=length(par$S),append=FALSE)
+	if(ncol(pdm)>0)
+	  write(par$p,con,ncolumns=length(par$p),append=TRUE)
+	if(ncol(psidm)>0)
+	  write(par$Psi,con,ncolumns=length(par$Psi),append=FALSE)
 	close(con)   
 	if(hessian)
 		xx=run_admb(tpl,extra.args=extra.args)
