@@ -1,3 +1,9 @@
+marked 1.2.2 13 Jult 2018
+-----------------
+CHANGES
+
+* for model mscjs, all parameter values can be fixed (eg, ddl$p$fix=1). Previously this resulted in a R error.
+
 marked 1.2.1 29 March 2018
 -----------------
 CHANGES
